lustre-collector/src/mgs/snapshots/lustre_collector__mgs__client_count_parser__test__client_count_parser_two_client.snap
---
source: lustre-collector/src/mgs/client_count_parser.rs
expression: result
---
(
    [
        Target(
            ConnectedClients(
                TargetStat {
                    kind: Mgt,
                    param: Param(
                        "connected_clients",
                    ),
                    target: Target(
                        "MGS",
                    ),
                    value: 10,
                },
            ),
        ),
    ],
    "",
)
