lustre-collector/src/mgs/snapshots/lustre_collector__mgs__client_count_parser__test__export_param.snap
---
source: lustre-collector/src/mgs/client_count_parser.rs
expression: result
---
(
    "MGS",
    "",
)
